fix issue on hover restaurant menu items on small devices

--- a/css/main.css
+++ b/css/main.css
@@ -606,7 +606,9 @@ img {
 }
 .section-menu__form .menu-item__title,
 .section-menu__form .menu-item .description {
-  max-width: calc(100% - 3rem);
+  display: inline-block;
+  max-width: calc(100% - 4rem);
+  width: 17rem;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -682,6 +684,18 @@ img {
 }
 .section-menu__form .section-submit__btn {
   padding: 1.3rem 4.8rem;
+}
+@media (min-width: 375px) {
+  .section-menu__form .menu-item__title,
+  .section-menu__form .menu-item .description {
+    width: 21rem;
+  }
+}
+@media (min-width: 768px) {
+  .section-menu__form .menu-item__title,
+  .section-menu__form .menu-item .description {
+    width: auto;
+  }
 }
 @media (min-width: 992px) {
   .section-menu__form {
